--- a/Custom Campaign UIs/Babylon.css
+++ b/Custom Campaign UIs/Babylon.css
@@ -260,7 +260,7 @@ button:hover,
 form button:hover,
 .dice-tray button:hover {
     background-color: var(--hover-color);
-    color: var(--text-color);
+    color: var(--title-text-color);
     border-color: transparent;
     -webkit-box-shadow: none;
     box-shadow: none;
