--- a/easyUI.css
+++ b/easyUI.css
@@ -267,6 +267,7 @@ form button:hover,
     -webkit-box-shadow: none;
     box-shadow: none;
     transition: 0.0375s;
+    color: var(--title-text-color);
 }
 input,
 form .form-group .form-fields>*,
