--- a/Custom Campaign UIs/cyberpunk.css
+++ b/Custom Campaign UIs/cyberpunk.css
@@ -609,3 +609,26 @@ p {
 .worldbuilding.sheet.actor{
     min-width: 436px;
 }
+
+/*Fullscreen pause screen*/
+#pause {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    bottom: 0%;
+    margin: 0;
+    background: var(--color-cool-5-25);
+}
+
+#pause figcaption {
+    line-height: 11vh;
+}
+
+
+#pause img {
+    position: absolute;
+    top: 40vh;
+    left: -20%;
+    height: 100vh;
+    width: 100vh;
+}
